<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_camera" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_notification" />
    </group>

    <item
        android:id="@+id/nav_trans"
        android:icon="@drawable/ic_logo"
        android:title="@string/menu_transformer" />

    <item android:title="Google Service">
        <menu>
            <item
                android:id="@+id/nav_map"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_map" />
            <item
                android:id="@+id/nav_pay"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_pay" />
        </menu>
    </item>
    <group>
        <item
            android:id="@+id/nav_logout"
            android:title="Logout"
            android:icon="@drawable/ic_logo"
            />

    </group>
</menu>
