<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        <ImageView
                android:id="@+id/imageView2"
                android:layout_width="230dp"
                android:layout_height="230dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toTopOf="@+id/editLoginEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.02"
                app:layout_constraintVertical_chainStyle="spread_inside"
                app:srcCompat="@drawable/ic_logo" />

        <EditText
                android:id="@+id/editLoginEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="7dp"
                android:backgroundTint="@color/black"
                android:theme="@style/AppTheme"
                android:ems="10"
                android:hint="@string/label_email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black"
                android:textColorHint="#bbbbbb"
                app:layout_constraintBottom_toTopOf="@+id/editLoginPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <EditText
                android:id="@+id/editLoginPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/black"
                android:theme="@style/AppTheme"
                android:ems="10"
                android:hint="password"
                android:inputType="textPassword"
                android:textColor="@android:color/tertiary_text_dark"
                android:textColorHint="#bbbbbb"
                app:layout_constraintBottom_toTopOf="@+id/email_sign_in_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editLoginEmail" />

        <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:backgroundTint="#bbbbbb"
                android:text="@string/action_sign_in"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editLoginPassword" />

        <TextView
                android:id="@+id/signup_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="51dp"
                android:layout_marginLeft="51dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="120dp"
                android:layout_marginRight="120dp"
                android:text="@string/action_new_account"
                android:textAppearance="@style/TextAppearance.F5"
                android:textColor="@android:color/tertiary_text_dark"
                app:layout_constraintEnd_toStartOf="@+id/forget_password_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_sign_in_button" />

        <TextView
                android:id="@+id/forget_password_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/action_forgot_passwd"
                android:textAppearance="@style/TextAppearance.F5"
                android:textColor="@android:color/tertiary_text_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_sign_in_button" />

        <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_sign_in_button"
                app:layout_constraintVertical_bias="1.0" />

        <ImageButton
                android:id="@+id/backButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="28dp"
                android:background="@android:color/transparent"
                android:elevation="16dp"
                android:scaleType="fitXY"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_arrowback" />
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:indeterminate="true" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>